@@ -10,10 +10,10 @@
 		Taijin=0;
 		// -->
 	</script>
-	<script type="text/javascript" src="js/head.js?v=3"></script>
-	<script type="text/javascript" src="js/item.js?v=3"></script>
-	<script type="text/javascript" src="js/etc.js?v=3"></script>
-	<script type="text/javascript" src="js/skill.js?v=3"></script>
+	<script type="text/javascript" src="js/head.js?v=4"></script>
+	<script type="text/javascript" src="js/item.js?v=4"></script>
+	<script type="text/javascript" src="js/etc.js?v=4"></script>
+	<script type="text/javascript" src="js/skill.js?v=4"></script>
 	<script type="text/javascript" src="js/libs/base64.js"></script>
 	<script type="text/javascript" src="js/libs/rawinflate.js"></script>
 	<script type="text/javascript" src="js/libs/rawdeflate.js"></script>
@@ -35,15 +35,22 @@
 <div class="topic">
 	<h3>CHANGELOG</h3>
 	<div class="pad">
+		<span><b>2020-07-04</b></span>
+		<div id="changelog20200704">
+			<ul>
+				<li>Fixed The Ring of Nibelugen damage formula</li>
+				<li>Added Ancient Tower and Elysian Garden monsters</li>
+			</ul>
+		</div>
+		<br/>
 		<span><b>2020-06-21</b></span>
-		<div id="changelog20200424">
+		<div id="changelog20200621">
 			<ul>
 				<li>Fixed AR/FAR ASPD party buff</li>
 				<li>Fixed Eddga behaviour with MDEF</li>
-				<li>Added new Elysian Garden monsters</li>
 				<li>Fixed Spiral Pierce damage computation</li>
-				<li>Added form validation upon save action</li>
 				<li>Fixed ASPD value for Katar on Assassin</li>
+				<li>Added form validation upon save action</li>
 				<li>Shield Chain now take into consideration class defense bypass</li>
 			</ul>
 		</div>
@@ -1209,9 +1216,9 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="js/monster.js?v=2"></script>
-<script type="text/javascript" src="js/card.js?v=2"></script>
-<script type="text/javascript" src="js/foot.js?v=2"></script>
+<script type="text/javascript" src="js/monster.js?v=4"></script>
+<script type="text/javascript" src="js/card.js?v=4"></script>
+<script type="text/javascript" src="js/foot.js?v=4"></script>
 </form>
 		<script type="text/javascript">
 			function Toogle(x,t){
