@@ -1,3 +1,7 @@
+[2020-07-04]
+- Added Ancient Tower monsters
+- Fixed The Ring of Nibelugen damage formula
+
 [2020-06-21]
 - Fixed AR/FAR ASPD party buff
 - Fixed Eddga behaviour with MDEF
